move add to center

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -310,6 +310,8 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 #add-node-form {
   width: 255px;
+  position:relative;
+  top:-60px;
   textarea {
     width: 230px;
     margin-top: 8px;
