improvement to behavior when both sidebars open

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -358,6 +358,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   cursor: pointer;
   padding: 6px;
   top: 8px;
+  width: 300px;
 }
 
 #menu-title:focus {
