--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -34,5 +34,5 @@ block content
       button#zoom-out-button.btn.btn-primary(title="Zoom Out")
         i.glyphicon.glyphicon-minus
     #trash-bin.controls(title="Drag a node here to Archive it")
-      i.fa.fa-archive
+      i.fa.fa-eye-slash
   .data-tooltip-container
