--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -670,6 +670,25 @@ body {
     padding: 10px 15px;  
 }
 
+.add-color-item {
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+  cursor: pointer;
+}
+
+#add-image-container {
+  width: 150px;
+  border: 1px solid #efefef;
+  font-size: 14px;
+  outline: none;
+  padding: 2px 4px;
+}
+
+#add-color-container {
+  display: inline;
+}
+
 #add.contracted #add-toolbar, #add.contracted #add-title {
     display: none;
 }
