--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -14,6 +14,10 @@
 
 @bottom-margin:70px;
 
+body, .node-title-body {
+  font-family: 'Varela Round';
+}
+
 .node {
   /*transition: opacity .5s ease-in-out;*/
 }
@@ -91,8 +95,7 @@
 
 .node-title-body {
   cursor: pointer;
-  font: 16px sans-serif;
-  font-weight:bold;
+  font-size: 16px;
   text-anchor: middle;
   fill: @text-color;
 }
