--- a/app/assets/stylesheets/landing.less
+++ b/app/assets/stylesheets/landing.less
@@ -1,4 +1,4 @@
-* {
+body, html {
   margin: 0;
   padding: 0;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
