--- a/app/templates/edit_form.html
+++ b/app/templates/edit_form.html
@@ -1,4 +1,4 @@
-<form class="form" role="form">
+<form class="form" id="edit-node-form" role="form">
   <div data-fields="name,url,description,image"></div>
   <div class="colorpalette"></div>
   <button id='save-node-connection-button' class="btn btn-default" type="submit">
