--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -678,15 +678,23 @@ body {
 }
 
 #add-image-container {
-  width: 150px;
+  width: 200px;
   border: 1px solid #efefef;
   font-size: 14px;
   outline: none;
-  padding: 2px 4px;
+  padding: 2px 4px 2px 30px;
+  position: relative;
+  top: -2px;
+  left: -40px;
+  background: transparent;
+  z-index: @controls-z-index - 1;
 }
 
 #add-color-container {
   display: inline;
+  position: relative;
+  top: 1px;
+  left: -5px;
 }
 
 #add.contracted #add-toolbar, #add.contracted #add-title {
@@ -701,6 +709,16 @@ body {
     cursor: pointer;
     outline: none;
     margin: 0 10px;
+}
+
+.color-circle {
+  margin: 0 2px;
+  border: 0;
+  background: 0;
+  font-size: 14pt;
+  color: #777;
+  cursor: pointer;
+  border-radius: 50px;
 }
 
 #add-toolbar-left button:hover {
@@ -753,6 +771,7 @@ body {
     box-sizing: border-box;
     resize: none;
     background: transparent;
+    max-height: 100px;
 }
 
 #add-image-url {
@@ -762,6 +781,7 @@ body {
 #add-description {
     font-family: 'Roboto Slab', sans-serif;
     width: 400px;
+    max-height: 200px;
     font-weight: 300;
     font-size: 10pt;
     border: 0;
