--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -44,6 +44,9 @@ block content
 
   .sidebar.right#sidebar-right
     .list-group
-      a.list-group-item#save-workspace-button(data-toggle="popover" title="Name this snapshot [Optional]." data-placement="left" data-container="#graph")
-        | Save Workspace
+      a.list-group-item#save-workspace-button(data-toggle="popover" title="Name this View [Optional]." data-placement="left" data-container="#graph")
+        | Save View
       a.list-group-item#sharing-button Share GraphDoc
+
+  .toolbar.right.controls
+      #phantom-share
