replace text node with something

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -17,7 +17,7 @@ block content
         form#add-node-form.form-inline
           #add.contracted
             textarea#add-title(name="name", placeholder='Title', rows='1')
-            textarea#add-description(name="description", placeholder='Add Node', rows='1')
+            textarea#add-description(name="description", placeholder='Add Something', rows='1')
             #add-toolbar.cf
               #add-toolbar-left
                 button#add-color.color-circle(type="button")
@@ -27,7 +27,7 @@ block content
                   i.fa.fa-image(title='Add image')
                 input#add-image-container.hidden(type="text", placeholder="image url")
               #add-toolbar-right
-                button#add-submit(title='Create node')
+                button#add-submit(title='Create something')
                   | Done
 
     .toolbar.bottom.right.controls
