better text on splash page

--- a/app/public/user-index.jade
+++ b/app/public/user-index.jade
@@ -10,10 +10,9 @@ html
         h1
           span.fa.fa-lock
           |  GraphDocs
-        p Login or Register with:
         a.btn.btn-default(href='/u/login')
           span.fa.fa-user
-          |  Local Login
+          |  Login
         a.btn.btn-default(href='/u/signup')
           span.fa.fa-user
-          |  Local Signup
+          |  Signup
