move default route to be the login page

--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -28,5 +28,5 @@ html
           a(href='/u/login') Login
         p
           | Or go 
-          a(href='/u') home
+          a(href='/') home
           | .
