--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -28,5 +28,5 @@ html
           a(href='/u/signup') Signup
         p
           | Or go 
-          a(href='/u') home
+          a(href='/') home
           | .
