cleaner routes and automatically go to profile if logged in

--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -25,7 +25,7 @@ html
         hr
         p
           | Need an account? 
-          a(href='/u/signup') Signup
+          a(href='/signup') Signup
         p
           | Or go 
           a(href='/') home
