--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -25,7 +25,7 @@ html
         hr
         p
           | Already have an account? 
-          a(href='/u/login') Login
+          a(href='/login') Login
         p
           | Or go 
           a(href='/') home
