--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -15,8 +15,8 @@ head
       .page-header.text-center
         h1
           span.fa.fa-anchor
-          |  Profile Page
-        a.btn.btn-default.btn-sm(href='/u/logout') Logout
+          |  #{user.local.email.split('@')[0]}
+        a.btn.btn-default.btn-sm(href='/logout') Logout
       .row.text-center#button-container
         input#create.btn.btn-primary(type='button', value='Create new GraphDoc')
         input#open.btn.btn-default(type='button', value='Open existing GraphDoc')
