--- a/app/public/user-index.jade
+++ b/app/public/user-index.jade
@@ -10,9 +10,9 @@ html
         h1
           span.fa.fa-lock
           |  GraphDocs
-        a.btn.btn-default(href='/u/login')
+        a.btn.btn-default(href='/login')
           span.fa.fa-user
           |  Login
-        a.btn.btn-default(href='/u/signup')
+        a.btn.btn-default(href='/signup')
           span.fa.fa-user
           |  Signup
