--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -3,6 +3,9 @@ extends layout
 block content
   .sidebar.left#sidebar
     ul.nav.nav-stacked
+      if isAuthenticated
+        li
+          a(href="/profile") Your Profile
       li
         a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal") New
       li.dropdown
@@ -18,6 +21,9 @@ block content
         a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template") Filter
       li
         a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Analytics
+      if isAuthenticated
+        li
+          a(href="/logout") Logout
   #graph
     .loading-container
       i.fa.fa-circle-o-notch.fa-spin.fa-5x
