graphdocs are private by default but can be made public by a toggle in the share sidebar

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -62,3 +62,5 @@ block content
     .list-group
       a.list-group-item#save-workspace-button Save Workspace
       a.list-group-item#sharing-button Share GraphDoc
+      if isAuthenticated
+        a.list-group-item.public-button Make GraphDoc public
