open gdocs in gdocinterface now shows your documents when you are logged in and shows public documents when you are logged out

--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -19,6 +19,7 @@ html(lang="en")
       window.prefetch.nodes =!{JSON.stringify(nodes)};
       window.prefetch.connections =!{JSON.stringify(connections)};
       window.prefetch.theDocument =!{JSON.stringify(theDocument)};
+      window.user =!{JSON.stringify(user)};
 
   body
     include header
