--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -15,5 +15,5 @@ nav.navbar.navbar-default(role='navigation')
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.pull-right
             li
-              button#sidebar-toggle-right.btn.btn-default
-                i.fa.fa-share-alt
+              button#sidebar-toggle-right.btn
+                i.fa.fa-share-square-o.fa-2x
