less obtrusive zoom buttons

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -45,9 +45,9 @@ block content
           input#search-input.form-control(type="text", name='search-term' placeholder="Search...")
 
       #zoom-controls.btn-group-vertical.controls.pull-right
-        button#zoom-in-button.btn.btn-default(title="Zoom In")
+        button#zoom-in-button.btn(title="Zoom In")
           i.glyphicon.glyphicon-plus
-        button#zoom-out-button.btn.btn-default(title="Zoom Out")
+        button#zoom-out-button.btn(title="Zoom Out")
           i.glyphicon.glyphicon-minus
 
   .sidebar.right#sidebar-right
