better user login notification placement

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -196,6 +196,10 @@ svg {
   position: fixed;
 }
 
+.navbar-brand {
+  margin-left: 10px !important;
+}
+
 .uptwo {
   margin-top: -15px;
 }
@@ -231,10 +235,6 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 .sidebar.right{
   right:0;
-}
-
-#sidebar-toggle {
-  margin-left: 10px;
 }
 
 #search-form {
@@ -288,7 +288,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 .toolbar.left {
-  left: 15px;
+  left: 7px;
   /*z-index: @controls-z-index + 1;*/
 }
 
