refactor menus by function

--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -15,5 +15,8 @@ nav.navbar.navbar-default(role='navigation')
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.pull-right
             li
+              button.sidebar-toggle-view.btn
+                i.fa.fa-binoculars.fa-2x
+            li
               button.sidebar-toggle-right.btn
                 i.fa.fa-share-square-o.fa-2x
