--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-default(role='navigation')
+nav#main-cograph-nav.navbar.navbar-default(role='navigation')
     .container-fluid
         // Brand, toggle and title get grouped for better mobile display
         .navbar-header
@@ -7,7 +7,7 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          button#sidebar-toggle.btn.btn-default.navbar-brand(title="Open Menu") S
+          button#sidebar-toggle.btn.btn-default.navbar-brand(title="Open Menu") CG
           form.navbar-form.navbar-left.main-nav
             .form-group
               input#menu-title(type="text" placeholder="Untitled Doc" data-toggle="tooltip" data-placement="bottom" title="Rename Doc")
