--- a/app/templates/node-title.html
+++ b/app/templates/node-title.html
@@ -1,7 +1,9 @@
 <div class="pad">
+	<span>
   <% if(attributes.name.length < 30) { %>
     <%= attributes.name %>
   <% } else { %>
   <%= attributes.name.substring(0,27) %>...
   <% } %>
+  </span>
 </div>
