--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -1,6 +1,6 @@
 @import "colors";
 
-@body-background: @white; /*#efefef;*/
+@body-background: @white;
 
 @node-color: white;
 @connection-color: black;
@@ -11,15 +11,14 @@
 @text-color: #333;
 @controls-z-index: 1;
 @left-sidebar-z-index: @controls-z-index+1;
-
-@bottom-margin:80px;
+@bottom-margin: 80px;
 
 body, .node-title-body {
   font-family: 'Varela Round';
 }
 
 .node {
-  /*transition: opacity .5s ease-in-out;*/
+  transition: opacity 0.5s ease-in-out;
 }
 
 .node.dim {
@@ -78,7 +77,8 @@ body, .node-title-body {
 }
 
 .pad {
-  padding: 6px;
+  line-height: normal;
+  padding: 2px;
 }
 
 .node-title-body.shown {
@@ -148,10 +148,12 @@ body, .node-title-body {
 }
 
 .connection.dim line {
-  opacity: 0.1;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0.15;
 }
 
 .connection.dim text {
+  transition: opacity 0.5s ease-in-out;
   opacity: 0.3;
 }
 
@@ -176,10 +178,33 @@ html, body {
   height: 100%;
 }
 
+.sidebar.left i {
+  margin-right: 10px;
+  width: 20px;
+}
+
+#main-cograph-nav {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: @controls-z-index;
+  background: transparent;
+}
+
 #main-container {
-  position: fixed;
+  position: relative;
   height: 100%;
   width: 100%;
+}
+
+#page-container {
+  position: relative;
+}
+
+#sidebar-toggle {
+  border: 0;
+  font-size: 30pt;
+  font-weight: 600;
 }
 
 svg {
@@ -220,8 +245,20 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   top: 0;
   height: 100%;
   width: 0;
-  background: darken(#284552,10%);
+  background: rgba(25,25,25,1);
   overflow-y: auto;
+  padding-top: 10px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+}
+
+.sidebar a {
+  color: rgba(255,255,255,0.65);
+  font-size: 16px;
+}
+
+.sidebar a:hover,.sidebar .list-group-item, .nav > li > a:hover, .nav .open>a, .nav .open>a, .nav .open>a:hover, .nav .open>a:focus {
+  color: white;
+  background-color: transparent;
 }
 
 .sidebar.left {
@@ -264,7 +301,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 .close {
   outline: none;
-  font-size: 40px;
+  font-size: 20px;
   opacity: 0.4;
 }
 
@@ -313,8 +350,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 #add-node-form {
   width: 255px;
-  position:relative;
-  top:-60px;
+  z-index:  @controls-z-index + 1;
   textarea {
     width: 230px;
     margin-top: 8px;
@@ -439,14 +475,6 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 .form-control {
   border-radius: 0 !important;
-}
-
-.sidebar .list-group-item {
-  background-color: transparent;
-  border-radius: 0;
-  border: none;
-  color: #2C93FF;
-  cursor: pointer;
 }
 
 // Bootstrap-colorpalette
@@ -642,4 +670,46 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
     box-sizing: border-box;
     resize: none;
     background: transparent;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+
+  position: relative;
+  margin: 100px auto;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #333;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  -webkit-animation: bounce 2.0s infinite ease-in-out;
+  animation: bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
 }
