--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -1,27 +1,48 @@
 extends layout
 
-block content
+block sidebar
   .sidebar.left#sidebar
     ul.nav.nav-stacked
       li
-        a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal") New
+        a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal")
+          i.fa.fa-plus
+          | New
       li.dropdown
         a.dropdown-toggle(data-toggle='dropdown', href='#')
+          i.fa.fa-folder-open-o
           | Open
-          span.caret
+          //- span.caret
         ul.dropdown-menu
           li(role="presentation")
             a#open-doc-button(href="") Open GraphDoc
           li(role="presentation")
             a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open Workspace
       li
-        a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template") Filter
+        a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template")
+          i.fa.fa-filter
+          | Filter
       li
-        a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Analytics
+        a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal")
+          i.fa.fa-line-chart
+          | Stats
+  .sidebar.right#sidebar-right
+    ul.nav.nav-stacked
+      li
+        a#save-workspace-button(data-toggle="popover" title="Name this View [Optional]." data-placement="left" data-container="#graph")
+          i.fa.fa-laptop
+          | Save View
+      li
+        a#sharing-button 
+          i.fa.fa-share
+          | Share
+
+
+block content
   #graph
     .loading-container
-      i.fa.fa-circle-o-notch.fa-spin.fa-5x
-
+      .spinner
+        .double-bounce1
+        .double-bounce2
   .controls
     form#add-node-form.form-inline.center-block
       #add.contracted
@@ -38,6 +59,8 @@ block content
           #add-toolbar-right
             button#add-submit(title='Create something')
               | Done
+    .toolbar.right
+        #phantom-share
 
     .toolbar.bottom.right.controls
       form#search-form.form-inline.pull-left
@@ -49,11 +72,6 @@ block content
         button#zoom-out-button.btn(title="Zoom Out")
           i.glyphicon.glyphicon-minus
 
-  .sidebar.right#sidebar-right
-    .list-group
-      a.list-group-item#save-workspace-button(data-toggle="popover" title="Name this View [Optional]." data-placement="left" data-container="#graph")
-        | Save View
-      a.list-group-item#sharing-button Share GraphDoc
+  
 
-  .toolbar.right.controls
-      #phantom-share
+  
