smaller node bgs

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -10,7 +10,7 @@
 @data-tooltip-color: rgba(0,31,63,0.8);
 @controls-z-index: 1;
 
-@bottom-margin:60px;
+@bottom-margin: 60px;
 
 .node {
   /*transition: opacity .5s ease-in-out;*/
@@ -73,7 +73,7 @@
 }
 
 .pad {
-  padding: 6px;
+  padding: 3px 6px;
 }
 
 .node-title-body.shown {
@@ -464,8 +464,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 .node-toolbar {
   text-align: middle;
-  padding: 3px 3px 3px 6px;
-  border-bottom: 1px solid gray;
+  padding: 0 3px;
 }
 
 // Node Adder
