YES. this is a boss of a commit

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -39,9 +39,9 @@
   stroke: @selected-color;
 }
 
-.node-title-body:hover {
-  background: @white;
-}
+// .node-title-span:hover {
+//   background: @white;
+// }
 
 .node-title-body {
   // text-align: center;
@@ -60,7 +60,6 @@
 }
 
 .node, .connection {
-  cursor: pointer;
 }
 
 .node-info-body, .connection-info-body {
@@ -88,8 +87,11 @@
   stroke: #bbb;
 }
 
-.node-title-body {
+.node-title-span {
   cursor: pointer;
+}
+
+.node-title-body {
   font: 16px sans-serif;
   font-weight:bold;
   text-anchor: middle;
