--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -4,7 +4,10 @@ block content
   #sidebar
   #graph
     .loading-container
-      i.fa.fa-circle-o-notch.fa-spin.fa-5x
+      .spinner
+        .double-bounce1
+        .double-bounce2
+
     .toolbar.controls
       .navbar-left.navbar-form
         form#search-form.form-inline
