--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -366,6 +366,12 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   margin-left:auto;
 }
 
+#phantom-share{
+  position: relative;
+  bottom: 50px;
+  left: 3px;
+}
+
 .loading-container {
   width: 100px;
   height: 100px;
