--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -35,6 +35,8 @@ block content
         div Save Workspace
       button#sharing-button.btn.btn-primary
         div Share GraphDoc
+      button.feedback-btn.feedback-btn-blue
+        | Feedback
     #zoom-controls.btn-group-vertical.controls
       button#zoom-in-button.btn.btn-primary(title="Zoom In")
         i.glyphicon.glyphicon-plus
