--- a/app/public/landing.jade
+++ b/app/public/landing.jade
@@ -5,6 +5,7 @@ head
     title GraphDocs
     link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/assets/stylesheets/landing.css', rel='stylesheet')
+    link(href="/assets/libs/feedback-bot/src/feedback.css")
     script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
     script.
         window.prefetch =!{JSON.stringify(docs)};
