remove some commented out code and add a comment in the css to demark code for loader

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -39,10 +39,6 @@
   stroke: @selected-color;
 }
 
-// .node-title-span:hover {
-//   background: @white;
-// }
-
 .node-title-body {
   // text-align: center;
   background: transparent;
@@ -621,7 +617,7 @@ body {
     background: transparent;
 }
 
-
+/* LOADER */
 .spinner {
   width: 40px;
   height: 40px;
