reset custom.less

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -1,22 +1,16 @@
 @import "colors";
 
-@body-background: @white; /*#efefef;*/
-
 @node-color: white;
 @connection-color: black;
 @stroke-color: black;
 @selected-color: #74DDFC;
 @selected-nodetext-color: white;
-@fixed-color: @orange;
+@fixed-color: #333;
 @text-color: #333;
+@data-tooltip-color: rgba(0,31,63,0.8);
 @controls-z-index: 1;
-@left-sidebar-z-index: @controls-z-index+1;
 
-@bottom-margin:70px;
-
-body, .node-title-body {
-  font-family: 'Varela Round';
-}
+@bottom-margin: 60px;
 
 .node {
   /*transition: opacity .5s ease-in-out;*/
@@ -28,7 +22,8 @@ body, .node-title-body {
 
 .node.fixed .node-connector {
   stroke-width: 2px;
-  stroke: orange;
+  stroke-dasharray: 5,5;
+  stroke: @fixed-color;
 }
 
 .node.fixed .node-fix {
@@ -42,10 +37,6 @@ body, .node-title-body {
 .node.selected .node-connector {
   stroke-width: 2px;
   stroke: @selected-color;
-}
-
-.node-title-body:hover {
-  background: @white;
 }
 
 .node-title-body {
@@ -65,7 +56,6 @@ body, .node-title-body {
 }
 
 .node, .connection {
-  cursor: pointer;
 }
 
 .node-info-body, .connection-info-body {
@@ -78,7 +68,7 @@ body, .node-title-body {
 }
 
 .pad {
-  padding: 6px;
+  padding: 3px 6px;
 }
 
 .node-title-body.shown {
@@ -93,9 +83,13 @@ body, .node-title-body {
   stroke: #bbb;
 }
 
-.node-title-body {
+.node-title-span {
   cursor: pointer;
-  font-size: 16px;
+}
+
+.node-title-body {
+  font: 16px sans-serif;
+  font-weight:bold;
   text-anchor: middle;
   fill: @text-color;
 }
@@ -172,7 +166,7 @@ line.hidden {
 
 html, body {
   overflow: hidden;
-  background: @body-background;
+  background: #efefef;
   height: 100%;
 }
 
@@ -193,6 +187,7 @@ svg {
 #graph {
   width: 100%;
   height: 100%;
+  right:0;
   position: fixed;
 }
 
@@ -221,8 +216,9 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   left: 15px;
 }
 
-.sidebar {
+#sidebar {
   position: absolute;
+  left: 0;
   top: 0;
   height: 100%;
   width: 0;
@@ -230,17 +226,8 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   overflow-y: auto;
 }
 
-.sidebar.left {
-  left:0;
-  z-index: @left-sidebar-z-index;
-}
-
-.sidebar.right{
-  right:0;
-}
-
 #sidebar-toggle {
-  margin-left: 10px;
+  margin: 10px 0 0 0;
 }
 
 #trash-bin {
@@ -284,6 +271,20 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   padding-bottom: 10px;
 }
 
+.data-tooltip-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.data-tooltip {
+  background: @data-tooltip-color;
+  color: white;
+  font-size: 12px;
+  border: 1px solid white;
+  max-width: 300px;
+}
+
 .toolbar {
   position: absolute;
 }
@@ -311,16 +312,6 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   z-index: @controls-z-index;
 }
 
-#add-node-form {
-  width: 255px;
-  position:relative;
-  top:-60px;
-  textarea {
-    width: 230px;
-    margin-top: 8px;
-  }
-}
-
 #filter-panel {
  max-height: 250px; 
  overflow-y: scroll;
@@ -336,6 +327,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 .main-nav {
+  padding: 0;
   border: 0;
 }
 
@@ -356,12 +348,11 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 #menu-title {
   position: relative;
   outline: none;
+  background: beige;
   color: black;
   border: 0;
   cursor: pointer;
   padding: 6px;
-  top: 8px;
-  width: 300px;
 }
 
 #menu-title:focus {
@@ -378,10 +369,9 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   height: 100px;
   background-color: none;
   position: absolute;
-  top: 0;
+  top: 20%;
   left: 0;
   right: 0;
-  bottom: 0;
   margin: auto;
   i {
     position:relative;
@@ -429,14 +419,6 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   border-radius: 0 !important;
 }
 
-.sidebar .list-group-item {
-  background-color: transparent;
-  border-radius: 0;
-  border: none;
-  color: #2C93FF;
-  cursor: pointer;
-}
-
 // Bootstrap-colorpalette
 
 .bootstrap-colorpalette {
@@ -470,17 +452,16 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 .node-toolbar button:hover {
-  color: #3366BB;
+  color: #333;
 }
 
 .node-toolbar button:active {
-  color: #0645AD;
+  color: @selected-color;
 }
 
 .node-toolbar {
   text-align: middle;
-  padding: 3px 3px 3px 6px;
-  border-bottom: 1px solid gray;
+  padding: 0 3px;
 }
 
 // Node Adder
@@ -501,6 +482,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
  */
 .cf {
     *zoom: 1;
+}
+
+body {
+    background: #eee;
 }
 
 #add {
@@ -630,4 +615,47 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
     box-sizing: border-box;
     resize: none;
     background: transparent;
+}
+
+/* LOADER */
+.spinner {
+  width: 40px;
+  height: 40px;
+
+  position: relative;
+  margin: 100px auto;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #333;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  -webkit-animation: bounce 2.0s infinite ease-in-out;
+  animation: bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
 }
