--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -7,16 +7,25 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          button#sidebar-toggle.btn.btn-default.navbar-brand(title="Open Menu") S
+          a.navbar-brand(href='http://graphdocs.com') GraphDocs
           form.navbar-form.navbar-left.main-nav
             .form-group
               input#menu-title(type="text" placeholder="Untitled Doc" data-toggle="tooltip" data-placement="bottom" title="Rename Doc")
         // Collect the nav links, forms, and other content for toggling
         #gdocs-nav.collapse.navbar-collapse
-          ul.nav.navbar-nav.pull-right
-            if isAuthenticated
-              li
-                a Logged in as: #{user.local.email.split('@')[0]}
+          ul.nav.navbar-nav
             li
-              button#sidebar-toggle-right.btn.btn-default
-                i.fa.fa-share-alt
+              a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal") New
+            li.dropdown
+              a.dropdown-toggle(data-toggle='dropdown', href='#')
+                | Open
+                span.caret
+              ul.dropdown-menu
+                li(role="presentation")
+                  a#open-doc-button(href="") Open GraphDoc
+                li(role="presentation")
+                  a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open Workspace
+            li
+              a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template") Filter
+            li
+              a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Analytics
