better align sharing popup

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -367,7 +367,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 #phantom-share{
   position: relative;
   bottom: 50px;
-  left: 3px;
+  right: 67px;
 }
 
 .loading-container {
