--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -17,6 +17,7 @@ html(lang="en")
       window.prefetch.nodes =!{JSON.stringify(nodes)};
       window.prefetch.connections =!{JSON.stringify(connections)};
       window.prefetch.theDocument =!{JSON.stringify(theDocument)};
+      window.user =!{JSON.stringify(user)};
 
   body
     include header
