--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -10,7 +10,9 @@ html(lang="en")
     link(href='/assets/libs/targeted-atwho/dist/css/jquery.atwho.min.css', rel='stylesheet')
     link(href='/assets/stylesheets/typeahead.css', rel='stylesheet')
     link(href='/assets/stylesheets/gsdk-base.css', rel='stylesheet')
-    link(href='/assets/stylesheets/custom.css', rel='stylesheet')    
+    link(href='/assets/stylesheets/custom.css', rel='stylesheet')  
+    link(href="/assets/libs/feedback-bot/src/feedback.css" rel='stylesheet')
+  
     script(type='text/javascript', data-main="main", src="/assets/libs/requirejs/require.js") //loads main.js
     script.
       window.prefetch = {};
