--- a/app/templates/new_doc_modal.html
+++ b/app/templates/new_doc_modal.html
@@ -3,5 +3,5 @@
     <label for="newDocName">Document Name</label>
     <input type="name" class="form-control" id="newDocName" placeholder="Enter Doc Name">
   </div>
-  <button type="button" class="btn btn-primary">Create</button>
+  <button type="submit" class="btn btn-primary">Create</button>
 </form>
