implement usrenames on signup

--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -36,7 +36,7 @@ nav.navbar.navbar-default(role='navigation')
               li
                 a.public-button Make GraphDoc public
               li
-                a(href="/profile") #{user.local.email.split('@')[0]}'s Profile
+                a(href="/profile") #{user.local.name}'s Profile
               li
                 a(href="/logout") Logout
             else
