--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -19,6 +19,9 @@ html
             label Email
             input.form-control(type='text', name='email')
           .form-group
+            label Username
+            input.form-control(type='text', name='name')
+          .form-group
             label Password
             input.form-control(type='password', name='password')
           button.btn.btn-warning.btn-lg(type='submit') Signup
