--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -15,7 +15,7 @@ head
       .page-header.text-center
         h1
           span.fa.fa-anchor
-          |  #{user.local.email.split('@')[0]}
+          |  #{user.local.name}
         a.btn.btn-default.btn-sm(href='/logout') Logout
       .row.text-center#button-container
         input#create.btn.btn-primary(type='button', value='Create new GraphDoc')
@@ -30,6 +30,8 @@ head
               |  Local 
             p
               strong id:       #{user._id}
+              br
+              strong name:     #{user.local.name}
               br
               strong email:    #{user.local.email}
         // DOCUMENTS
