--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 head
-  title GraphDocs #{user.local.email}
+  title GraphDocs #{user.local.name}
   meta(charset='utf-8')
   link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
   link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
